Nickname compat, 1.21.11